force-app/main/default/objects/WeatherBit__mdt/WeatherBit__mdt.object-meta.xml
<CustomObject>
    <description>WeatherBit API configurations</description>
    <label>WeatherBit</label>
    <pluralLabel>WeatherBits</pluralLabel>
</CustomObject>