force-app/main/default/objects/WeatherBit__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>WeatherBit API Key</description>
    <inlineHelpText>WeatherBit API Key</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>