force-app/main/default/objects/WeatherBit__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description>WeatherBit API base URL</description>
    <inlineHelpText>WeatherBit API base URL</inlineHelpText>
    <label>Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>