force-app/main/default/objects/WeatherBit__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>WeatherBit endpoint URL</description>
    <inlineHelpText>WeatherBit endpoint URL</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>